@@ -1294,99 +1294,6 @@ do_whereis(dbref player, const char *name)
 
 }
 
-/** Find the entrances to a room.
- * \verbatim
- * This implements @entrances, which finds things linked to an object
- * (typically exits, but can be any type).
- * \endverbatim
- * \param player the enactor.
- * \param where name of object to find entrances on.
- * \param argv array of arguments for dbref range limitation.
- * \param types what type of 'entrances' to find.
- */
-void
-do_entrances(dbref player, const char *where, char *argv[], int types)
-{
-  dbref place;
-  dbref counter;
-  int rooms, things, exits, players;
-  int bot = 0;
-  int top = db_top;
-  int controlsplace;
-
-  rooms = things = exits = players = 0;
-
-  if (!where || !*where) {
-    if ((place = Location(player)) == NOTHING)
-      return;
-  } else {
-    if ((place = noisy_match_result(player, where, NOTYPE, MAT_EVERYTHING))
-        == NOTHING)
-      return;
-  }
-
-  controlsplace = controls(player, place);
-  if (!controlsplace && !Search_All(player)) {
-    notify(player, T("Permission denied."));
-    return;
-  }
-
-  /* determine range */
-  if (argv[1] && *argv[1])
-    bot = atoi(argv[1]);
-  if (bot < 0)
-    bot = 0;
-  if (argv[2] && *argv[2])
-    top = atoi(argv[2]) + 1;
-  if (top > db_top)
-    top = db_top;
-
-  for (counter = bot; counter < top; counter++) {
-    if (controlsplace || controls(player, counter)) {
-      if (!(types & Typeof(counter)))
-        continue;
-      switch (Typeof(counter)) {
-      case TYPE_EXIT:
-        if (Location(counter) == place) {
-          notify_format(player,
-                        T("%s(#%d) [from: %s(#%d)]"), Name(counter),
-                        counter, Name(Source(counter)), Source(counter));
-          exits++;
-        }
-        break;
-      case TYPE_ROOM:
-        if (Location(counter) == place) {
-          notify_format(player, T("%s(#%d) [dropto]"), Name(counter), counter);
-          rooms++;
-        }
-        break;
-      case TYPE_THING:
-      case TYPE_PLAYER:
-        if (Home(counter) == place) {
-          notify_format(player, T("%s(#%d) [home]"), Name(counter), counter);
-          if (IsThing(counter))
-            things++;
-          else
-            players++;
-        }
-        break;
-      }
-    }
-  }
-
-  if (!exits && !things && !players && !rooms) {
-    notify(player, T("Nothing found."));
-    return;
-  } else {
-    notify(player, T("----------  Entrances Done  ----------"));
-    notify_format(player,
-                  T
-                  ("Totals: Rooms...%d  Exits...%d  Things...%d  Players...%d"),
-                  rooms, exits, things, players);
-    return;
-  }
-}
-
 /** Store arguments for decompile_helper() */
 struct dh_args {
   char const *prefix;   /**< Decompile/tf prefix */
